--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -1,30 +1,54 @@
 .about {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    align-items: center;
-    margin: 30px 0;
-
-    & > h1 {
-        font-size: 50px;
-        font-weight: 500;
-        padding-bottom: 15px;
-    }
-
-    .about__line {
-        background-color: red;
-        height: 2px;
-        width: 80px;
-    }
-
-    .about__box {
-        margin-top: 60px;
-        width: 80%;
+    .about__first {
         display: flex;
-        justify-content: space-evenly;
+        flex-direction: column;
+        width: 100vw;
+        align-items: center;
+        margin: 50px 0 80px 0;
+
+        .about__box {
+            margin-top: 60px;
+            width: 80%;
+            display: flex;
+            justify-content: space-evenly;
+        }
+    }
+
+    .about__second {
+        display: flex;
+        justify-content: space-around;
+        padding: 60px 12vw;
+        background-color: rgb(248, 248, 248);
+
+        & > img {
+            width: 432px;
+            height: 600px;
+            margin-right: 14vw;
+        }
+
+        .about__secondcontents {
+            display: flex;
+            flex-direction: column;
+
+            & > h1 {
+                font-size: 50px;
+                font-weight: 550;
+                margin-bottom: 30px;
+            }
+
+            & > p {
+                font-size: 18px;
+                line-height: 28px;
+            }
+
+            .about__buttons {
+                display: flex;
+                margin-top: 20px;
+                justify-content: space-between;
+            }
+        }
     }
 }
-
 @media only screen and (max-width: 1000px) {
     .about {
         .about__box {
@@ -44,16 +68,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-        }
-    }
-}
-
-@media only screen and (max-width: 380px) {
-    .about {
-        & > h1 {
-            font-size: 40px;
-            font-weight: 500;
-            padding-bottom: 15px;
         }
     }
 }
