--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -7,6 +7,7 @@
     top: 0;
     z-index: 100;
     background-color: white;
+    height: 75px;
 
     .header__logo {
         margin: 1vh 0 1vh 8vw;
@@ -62,7 +63,7 @@
             border-radius: 5px;
             height: 88vh;
             position: absolute;
-            top: 12vh;
+            top: 75px;
             right: -100%;
             opacity: 1;
             transition: all 0.5s ease;
