--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -6,7 +6,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: fit-content;
     background-image: url(../../assets/bg-img/welcome-bg.jpg);
 
     .home__contents {
@@ -15,6 +15,7 @@
         color: white;
         padding-top: 22vh;
         padding-left: 12vw;
+        padding-bottom: 23vh;
 
         & > h2 {
             position: absolute;
