--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -1,4 +1,8 @@
 .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     .about__first {
         display: flex;
         flex-direction: column;
@@ -16,58 +20,135 @@
 
     .about__second {
         display: flex;
-        justify-content: space-around;
-        padding: 60px 12vw;
+        justify-content: center;
         background-color: rgb(248, 248, 248);
+        width: 100%;
 
-        & > img {
-            width: 432px;
-            height: 600px;
-            margin-right: 14vw;
-        }
-
-        .about__secondcontents {
+        .about__main {
             display: flex;
-            flex-direction: column;
+            justify-content: space-evenly;
+            margin: 60px 0;
+            width: 90%;
 
-            & > h1 {
-                font-size: 50px;
-                font-weight: 550;
-                margin-bottom: 30px;
+            & > img {
+                width: 432px;
+                height: 600px;
             }
 
-            & > p {
-                font-size: 18px;
-                line-height: 28px;
-            }
-
-            .about__buttons {
+            .about__secondcontents {
                 display: flex;
-                margin-top: 20px;
-                justify-content: space-between;
+                flex-direction: column;
+                width: 35vw;
+
+                & > h1 {
+                    font-size: 50px;
+                    font-weight: 550;
+                    margin-bottom: 30px;
+                }
+
+                & > p {
+                    font-size: 18px;
+                    line-height: 28px;
+                    align-items: justify;
+                }
+
+                .about__buttons {
+                    display: flex;
+                    margin-top: 20px;
+                    justify-content: space-between;
+                }
             }
         }
     }
 }
-@media only screen and (max-width: 1000px) {
+
+@media only screen and (max-width: 1200px) {
     .about {
-        .about__box {
-            margin-top: 60px;
-            width: 90%;
-            display: flex;
-            justify-content: space-evenly;
+        .about__second {
+            .about__main {
+                display: flex;
+                justify-content: space-evenly;
+                margin: 60px 0;
+                width: 100%;
+
+                & > img {
+                    width: 332px;
+                    height: 500px;
+                }
+
+                .about__secondcontents {
+                    display: flex;
+                    flex-direction: column;
+                    width: 40vw;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1080px) {
+    .about {
+        .about__first {
+            .about__box {
+                margin-top: 60px;
+                width: 90%;
+                display: flex;
+                justify-content: space-evenly;
+            }
+        }
+
+        .about__second {
+            .about__main {
+                display: flex;
+                flex-direction: column;
+                width: 90%;
+                align-items: center;
+
+                & > img {
+                    width: 332px;
+                    height: 500px;
+                    margin-bottom: 30px;
+                }
+                .about__secondcontents {
+                    display: flex;
+                    flex-direction: column;
+                    width: 60vw;
+                }
+            }
         }
     }
 }
 
 @media only screen and (max-width: 830px) {
     .about {
-        .about__box {
-            margin-top: 60px;
-            width: 90%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        .about__first {
+            .about__box {
+                margin-top: 60px;
+                width: 90%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+
+        .about__second {
+            .about__main {
+                display: flex;
+                flex-direction: column;
+                width: 90%;
+                align-items: center;
+
+                & > img {
+                    width: 332px;
+                    height: 500px;
+                    margin-bottom: 30px;
+                }
+                .about__secondcontents {
+                    display: flex;
+                    flex-direction: column;
+                    width: 65vw;
+                }
+            }
         }
     }
 }
