--- a/src/Components/Box/Box.scss
+++ b/src/Components/Box/Box.scss
@@ -1,4 +1,4 @@
-.box {
+.box1 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,6 +6,7 @@
     border-radius: 25px 25px 25px 0;
     padding: 25px;
     box-shadow: 0 5px 50px rgb(223, 223, 223);
+    animation: box 1s ease;
 
     .box__icons {
         color: red;
@@ -17,23 +18,127 @@
     & > h5 {
         margin-top: 10px;
         text-align: center;
-        font-size: 16px;
-        font-weight: 500;
-        color: rgb(24, 24, 24);
+        font-size: 17px;
+        font-weight: 550;
+        color: rgb(0, 0, 0);
     }
 
     & > p {
         margin-top: 15px;
         text-align: justify;
         font-size: 15px;
-        color: rgb(70, 70, 70);
+        color: rgb(95, 95, 95);
         line-height: 22px;
         font-weight: 400;
     }
+
+    @keyframes box {
+        0% {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
 }
 
+.box2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20vw;
+    border-radius: 25px 25px 25px 0;
+    padding: 25px;
+    box-shadow: 0 5px 50px rgb(223, 223, 223);
+    animation: box 2s ease;
+
+    .box__icons {
+        color: red;
+        width: 40px;
+        height: 40px;
+        margin-bottom: 10px;
+    }
+
+    & > h5 {
+        margin-top: 10px;
+        text-align: center;
+        font-size: 17px;
+        font-weight: 550;
+        color: rgb(0, 0, 0);
+    }
+
+    & > p {
+        margin-top: 15px;
+        text-align: justify;
+        font-size: 15px;
+        color: rgb(95, 95, 95);
+        line-height: 22px;
+        font-weight: 400;
+    }
+
+    @keyframes box {
+        0% {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+}
+
+.box3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20vw;
+    border-radius: 25px 25px 25px 0;
+    padding: 25px;
+    box-shadow: 0 5px 50px rgb(223, 223, 223);
+    animation: box 3s ease;
+
+    .box__icons {
+        color: red;
+        width: 40px;
+        height: 40px;
+        margin-bottom: 10px;
+    }
+
+    & > h5 {
+        margin-top: 10px;
+        text-align: center;
+        font-size: 17px;
+        font-weight: 550;
+        color: rgb(0, 0, 0);
+    }
+
+    & > p {
+        margin-top: 15px;
+        text-align: justify;
+        font-size: 15px;
+        color: rgb(95, 95, 95);
+        line-height: 22px;
+        font-weight: 400;
+    }
+
+    @keyframes box {
+        0% {
+            opacity: 0;
+            transform: translateY(20px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+}
 @media only screen and (max-width: 830px) {
-    .box {
+    .box1,
+    .box2,
+    .box3 {
         display: flex;
         flex-direction: column;
         align-items: center;
