--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -152,3 +152,44 @@
         }
     }
 }
+
+@media only screen and (max-width: 700px) {
+    .about {
+        .about__second {
+            .about__main {
+                display: flex;
+                flex-direction: column;
+                width: 90%;
+                align-items: center;
+
+                .about__secondcontents {
+                    display: flex;
+                    flex-direction: column;
+                    width: 70vw;
+
+                    & > h1 {
+                        font-size: 30px;
+                        font-weight: 550;
+                        margin-bottom: 30px;
+                        text-align: center;
+                    }
+
+                    & > p {
+                        font-size: 18px;
+                        line-height: 28px;
+                        align-items: justify;
+                        text-align: center;
+                    }
+
+                    .about__buttons {
+                        display: flex;
+                        flex-direction: column;
+                        margin-top: 20px;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                }
+            }
+        }
+    }
+}
