--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -46,6 +46,7 @@
     transition: all 0.5s ease;
     width: 220px;
     outline: none;
+    margin: 10px;
 
     .button__icons {
         color: white;
