--- a/src/Components/Title/Title.scss
+++ b/src/Components/Title/Title.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 
     .title__heading {
         font-size: 50px;
@@ -16,10 +17,10 @@
     }
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 700px) {
     .title {
         .title__heading {
-            font-size: 40px;
+            font-size: 30px;
             font-weight: 500;
             padding-bottom: 15px;
         }
