--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -6,23 +6,11 @@
     transition: all 0.5s ease;
     width: 200px;
     outline: none;
-    animation: button 2s;
 
     & > div > h6 {
         font-size: 16px;
         font-weight: 550;
         color: red;
-    }
-
-    @keyframes button {
-        0% {
-            margin-top: 40px;
-            opacity: 0;
-        }
-        100% {
-            margin-top: 0;
-            opacity: 1;
-        }
     }
 }
 .button__home:hover {
@@ -61,7 +49,7 @@
         align-items: flex-start;
 
         & > h6 {
-            font-size: 12px;
+            font-size: 13px;
             font-weight: 550;
             color: white;
             margin-left: 2px;
@@ -94,5 +82,75 @@
         width: 30px;
         height: 30px;
         margin-right: 14px;
+    }
+}
+
+.button__download {
+    display: flex;
+    justify-content: center;
+    padding: 12px 15px;
+    border-radius: 25px 25px 25px 0;
+    border: solid 2px white;
+    background-color: white;
+    transition: all 0.5s ease;
+    width: 250px;
+    outline: none;
+    margin: 10px;
+
+    .button__icons {
+        color: red;
+        width: 30px;
+        height: 30px;
+        margin-right: 14px;
+    }
+
+    & > div {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        & > h6 {
+            font-size: 13px;
+            font-weight: 550;
+            color: black;
+            margin-left: 2px;
+        }
+
+        & > h5 {
+            font-size: 18px;
+            font-weight: 550;
+            color: red;
+        }
+    }
+}
+.button__download:hover {
+    cursor: pointer;
+    transition: all 0.5s ease;
+    background-color: red;
+    border: solid 2px white;
+
+    .button__icons {
+        color: white;
+        width: 30px;
+        height: 30px;
+        margin-right: 14px;
+    }
+    & > div {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        & > h6 {
+            font-size: 13px;
+            font-weight: 650;
+            color: white;
+            margin-left: 2px;
+        }
+
+        & > h5 {
+            font-size: 18px;
+            font-weight: 650;
+            color: white;
+        }
     }
 }
