--- a/src/Components/Title/Title.scss
+++ b/src/Components/Title/Title.scss
@@ -2,7 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+
+    .title__heading {
+        font-size: 50px;
+        font-weight: 500;
+        padding-bottom: 15px;
+        text-align: center;
+    }
+
+    .about__line {
+        background-color: red;
+        height: 2px;
+        width: 80px;
+    }
+}
+
+.title__contact {
+    align-items: left;
+    display: flex;
+    flex-direction: column;
 
     .title__heading {
         font-size: 50px;
@@ -18,7 +36,8 @@
 }
 
 @media only screen and (max-width: 700px) {
-    .title {
+    .title,
+    .title__contact {
         .title__heading {
             font-size: 30px;
             font-weight: 500;
