--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     background-color: #f5f9fc;
-    margin: 40px 0 200px 0;
+    margin: 40px 0;
     padding: 50px 0;
     box-shadow: rgb(202, 202, 202) 0px 20px 30px -20px;
 
@@ -76,7 +76,7 @@
         display: flex;
         width: 100%;
         background-color: #f5f9fc;
-        margin: 40px 0 200px 0;
+        margin: 40px 0;
         padding: 50px 0;
         box-shadow: rgb(202, 202, 202) 0px 20px 30px -20px;
 
@@ -152,7 +152,7 @@
         display: flex;
         width: 100%;
         background-color: #f5f9fc;
-        margin: 40px 0 200px 0;
+        margin: 40px 0;
         padding: 50px 0;
         box-shadow: rgb(202, 202, 202) 0px 20px 30px -20px;
 
@@ -232,7 +232,7 @@
         display: flex;
         width: 100%;
         background-color: #f5f9fc;
-        margin: 40px 0 200px 0;
+        margin: 40px 0;
         padding: 50px 0;
         box-shadow: rgb(202, 202, 202) 0px 20px 30px -20px;
 
