--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -2,13 +2,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    z-index: 1;
+    background-color: white;
 
     .about__first {
         display: flex;
         flex-direction: column;
         width: 100vw;
         align-items: center;
-        margin: 50px 0 80px 0;
+        margin: 40px 0 80px 0;
 
         .about__box {
             margin-top: 60px;
