--- a/src/Components/Download/Download.scss
+++ b/src/Components/Download/Download.scss
@@ -1,41 +1,20 @@
 .download {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-    border: solid 1px black;
-    margin: 50px 0;
-    padding: 55px 0;
-    background: linear-gradient(to left, #dc2326, #9f1c1f);
+    position: relative;
+    z-index: 1;
+    background-color: white;
+    padding: 50px 0;
 
-    .download__content {
-        color: white;
-
-        & > h1 {
-            font-size: 35px;
-            margin-bottom: 10px;
-        }
-    }
-    .download__buttons {
+    .download__body {
         display: flex;
-    }
-}
-
-@media only screen and (max-width: 1000px) {
-    .download {
-        display: flex;
-        flex-direction: column;
         width: 100%;
-        justify-content: center;
-        align-items: space-evenly;
-        border: solid 1px black;
-        margin: 50px 0;
+        justify-content: space-evenly;
+        align-items: center;
         padding: 55px 0;
+
         background: linear-gradient(to left, #dc2326, #9f1c1f);
 
         .download__content {
             color: white;
-            margin-bottom: 20px;
 
             & > h1 {
                 font-size: 35px;
@@ -48,31 +27,67 @@
     }
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 1000px) {
     .download {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        justify-content: center;
-        align-items: space-evenly;
-        border: solid 1px black;
-        margin: 50px 0;
-        padding: 55px 0;
-        background: linear-gradient(to left, #dc2326, #9f1c1f);
+        position: relative;
+        z-index: 1;
+        background-color: white;
+        padding: 50px 0;
 
-        .download__content {
-            color: white;
-            margin-bottom: 20px;
-            text-align: center;
-
-            & > h1 {
-                font-size: 30px;
-                margin-bottom: 10px;
-            }
-        }
-        .download__buttons {
+        .download__body {
             display: flex;
             flex-direction: column;
+            width: 100%;
+            justify-content: center;
+            align-items: space-evenly;
+            padding: 55px 0;
+            background: linear-gradient(to left, #dc2326, #9f1c1f);
+
+            .download__content {
+                color: white;
+                margin-bottom: 20px;
+
+                & > h1 {
+                    font-size: 35px;
+                    margin-bottom: 10px;
+                }
+            }
+            .download__buttons {
+                display: flex;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .download {
+        position: relative;
+        z-index: 1;
+        background-color: white;
+        padding: 50px 0;
+        .download__body {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            justify-content: center;
+            align-items: space-evenly;
+            padding: 55px 0;
+            background: linear-gradient(to left, #dc2326, #9f1c1f);
+
+            .download__content {
+                color: white;
+                margin-bottom: 20px;
+                text-align: center;
+
+                & > h1 {
+                    font-size: 30px;
+                    margin-bottom: 10px;
+                }
+            }
+            .download__buttons {
+                display: flex;
+                flex-direction: column;
+            }
         }
     }
 }
