--- a/src/Components/Features/Features.scss
+++ b/src/Components/Features/Features.scss
@@ -1,13 +1,16 @@
 .features {
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 1;
+    background-color: white;
 
     .features__section {
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
-        margin: 30px 0;
+        margin: 40px 0;
 
         .features__main {
             display: flex;
