--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -3,13 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 60px 0;
+    padding: 70px 0;
     color: rgb(85, 85, 85);
-    // position: fixed;
+    position: sticky;
     bottom: 0;
     width: 100%;
     text-align: center;
-    // z-index: -101;
+    background-color: white;
+    z-index: -101;
 
     & > img {
         margin-bottom: 10px;
