--- a/src/Components/Testimonials/Testimonials.scss
+++ b/src/Components/Testimonials/Testimonials.scss
@@ -2,7 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 40px;
+    position: relative;
+    z-index: 1;
+    background-color: white;
 
     .testimonials__quote {
         width: 90px;
